--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i>  <span class="light">Bernice Go</span>
+                    <i class="fa fa-rocket"></i>  <span class="light">Bernice Go</span>
                 </a>
             </div>
 
