Started work for portfolio section

--- a/index.html
+++ b/index.html
@@ -100,12 +100,15 @@
     </section>
 
     <!-- Portfolio Section -->
-    <section id="download" class="content-section text-center">
+    <section id="portfolio" class="content-section text-center">
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Portfolio</h2>
-                    <p></p>
+                    <div class="row" id="portfolio_entries">
+					
+  
+					</div>	
                     <span class="btn btn-default btn-lg">View more.</span>
                 </div>
             </div>
@@ -137,6 +140,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/grayscale.js"></script>
+    <script src="js/portfolio.js"></script>
 
 </body>
 
