--- a/index.html
+++ b/index.html
@@ -43,10 +43,8 @@
                 </a>
             </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
                 <ul class="nav navbar-nav">
-                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
@@ -103,12 +101,12 @@
     <section id="portfolio" class="content-section text-center">
         <div class="download-section">
             <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
+                <div class="col-lg-10 col-lg-offset-1">
                     <h2>Portfolio</h2>
                     <div class="row" id="portfolio_entries">
-					
-  
+                    	 <!-- Entries will appear here -->
 					</div>	
+                    <br>
                     <span class="btn btn-default btn-lg">View more.</span>
                 </div>
             </div>
