--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <a class="page-scroll" href="#about">Resume</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">Portfolio</a>
+                        <a class="page-scroll" href="#portfolio">Portfolio</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -107,7 +107,13 @@
                     	 <!-- Entries will appear here -->
 					</div>	
                     <br>
-                    <span class="btn btn-default btn-lg">View more.</span>
+                        <span class="btn btn-circle2" id="minus3">
+                            <i class="fa fa-arrow-circle-left"></i>
+                        </span>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;                   
+                        <span class="btn btn-circle2" id="plus3">
+                        	<i class="fa fa-arrow-circle-right"></i>
+                        </span>                     
                 </div>
             </div>
         </div>
