--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </section>
 
     <!-- Portfolio Section -->
-    <section id="portfolio" class="content-section text-center">
+    <section id="portfolio" class="content-section text-center center-block">
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-10 col-lg-offset-1">
