--- a/index.html
+++ b/index.html
@@ -106,13 +106,12 @@
                     	 <!-- Entries will appear here -->
 					</div>	
                     <br>
-                        <span class="btn btn-circle2" id="minus3">
-                            <i class="fa fa-arrow-circle-left"></i>
-                        </span>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;                   
-                        <span class="btn btn-circle2" id="plus3">
-                        	<i class="fa fa-arrow-circle-right"></i>
-                        </span>                     
+                    <nav>
+                      <ul class="pager">
+                        <li class="previous minus3 btn btn-lg" id="minus3"><span class="glyphicon glyphicon-chevron-left"></span></li>
+                        <li class="next plus3 btn btn-lg" id="plus3"><span class="glyphicon glyphicon-chevron-right"></span></li>
+                      </ul>
+                    </nav>                 
                 </div>
             </div>
         </div>
