--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="panel contact" ng-show="panel.isSelected(2)">
                         <p class="contactTitle">RESUME</p>
                         <p class="contactForm">
-                            <br>View PDF
+                            <br>View <a href="resume.pdf">PDF</a>
                         </div>
                 </div>
 
