--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
                             <div class="row">
                                 <div class=" columns">
                                     <h2>Work Experience</h2>
+                                    <div class="callout small">
+                                      <h3>Job title</h3>
+                                      <h4>Company // Date</h4> 
+                                      <a href="#">It's dangerous to go alone, take this.</a>
+                                    </div>
                                 </div>
                             </div>
                             <div class="row">
