--- a/index.html
+++ b/index.html
@@ -94,13 +94,21 @@
                                     <div class="callout small">
                                       <h3>Job title</h3>
                                       <h4>Company // Date</h4> 
-                                      <a href="#">It's dangerous to go alone, take this.</a>
+                                      <p>It's dangerous to go alone, take this.</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="columns">
                                     <h2>Education</h2>
+                                    <div class="callout small">
+                                      <h3>Honors Bachelor of Computer Science <span class="option">- Software Engineering Option</span></h3>
+                                      <h4>University of Waterloo // 2011 - 2016</h4> 
+                                    </div>
+                                    <div class="callout small">
+                                      <h3>Honors Bachelor of Business Administration <span class="option">- Marketing Specialization</span></h3>
+                                      <h4>Wilfrid Laurier University // 2011 - 2016</h4> 
+                                    </div>
                                 </div>
                             </div>
                             <div class="row">
@@ -109,8 +117,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="medium-11 large-3 medium-offset-1 columns">
-                            <h2>Skills</h2>
+                        <div class="medium-11 large-2 medium-offset-1 columns">
+                            <h2 class="largecenter">Skills</h2>
                         </div>
                     </div>
                 </div>
