--- a/index.html
+++ b/index.html
@@ -91,11 +91,19 @@
                             <div class="row">
                                 <div class=" columns">
                                     <h2>Work Experience</h2>
-                                    <div class="callout small">
-                                      <h3>Job title</h3>
-                                      <h4>Company // Date</h4> 
-                                      <p>It's dangerous to go alone, take this.</p>
-                                    </div>
+
+
+                                    <div class="work" ng-controller="workController">
+                                        <div ng-repeat="i in infos" class="workItem">
+                                           <div class="callout small">
+                                              <h3>{{ i.title }}</h3>
+                                              <h4>Company // Date</h4> 
+                                              <p>It's dangerous to go alone, take this.</p>
+                                            </div>
+                                        </div>
+                                    </div>     
+
+                                    
                                 </div>
                             </div>
                             <div class="row">
