--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 
                                     <div class="work" ng-controller="workController">
-                                        <div ng-repeat="i in infos" class="workItem">
+                                        <div ng-repeat="i in work" class="workItem">
                                            <div class="callout small">
                                               <h3>{{ i.title }}</h3>
                                               <h4>Company // Date</h4> 
