Added current projects

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="medium-11 large-3 columns">
+                        <div class="medium-11 medium-offset-1 large-offset-0 large-3 columns">
                             <h2 class="largecenter" id="skills">Skills</h2>
                             <div class="center">
                                 <img src="img/icons/ai.png" class="icon" title="Illustrator">
@@ -128,6 +128,38 @@
 
                             <p>Welcome to my online portfolio! 
                             </p>
+                            <h3>Current Projects</h3>
+                            <br>
+                            <div class="row">
+                                <div class="small-12 medium-offset-2 medium-4 columns">
+                                    <div class="callout small">
+                                        <h2>WATEats</h2>
+                                        <hr>
+                                        <p class="left info">
+                                            A Blackberry App. Offers a choice of restaurants near the University of Waterloo campus given constraints such as time, distance and price.
+                                        </p>
+                                        <hr>
+                                        <p class="info">
+                                            Expected release to the Blackberry App Store by end of April 2016
+                                        </p>
+                                    </div>
+                                </div>
+                                 <div class="small-12 medium-4 columns">
+                                    <div class="callout small">
+                                        <h2>Neko Game</h2>
+                                        <hr>
+                                        <p class="left info">
+                                            A 2D-platformer cat game, made with Unreal Engine 4. 
+                                        </p>
+                                        <hr>
+                                        <p class="info">
+                                            Under development
+                                        </p>
+                                    </div>
+                                </div>
+                           </div>
+
+                            <h3>Let's talk!</h3>
 
                             <p>Feel free to <a href="http://sites.strawberry-tenshi.net/#contact">contact me</a>, or send me a note on gmail - bernicewygo</p>        
 
