Updated online resume section

--- a/index.html
+++ b/index.html
@@ -99,15 +99,11 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
-                                <div class=" columns">
-                                    <h2>Recreational</h2>
-                                </div>
-                            </div>
                         </div>
                         <div class="medium-11 medium-offset-1 large-offset-0 large-3 columns">
                             <h2 class="largecenter" id="skills">Skills</h2>
                             <div class="center">
+                                <img src="img/icons/ae.png" class="icon" title="After Effects">
                                 <img src="img/icons/ai.png" class="icon" title="Illustrator">
                                 <img src="img/icons/id.png" class="icon" title="InDesign">
                                 <img src="img/icons/ps.png" class="icon" title="Photoshop">
@@ -116,9 +112,26 @@
                                 <img src="img/icons/cpp.png" class="icon" title="C++">
                                 <img src="img/icons/javascript.png" class="icon" title="Javascript">
                                 <img src="img/icons/jquery.png" class="icon" title="JQuery">
+                                <img src="img/icons/php.png" class="icon" title="PHP">
                                 <br>
                                 <img src="img/icons/bootstrap.png" class="icon" title="Bootstrap">
                                 <img src="img/icons/foundation.png" class="icon" title="Foundation">
+                            </div>
+                        
+
+                            <h2 class="largecenter" id="skills">Hobbies</h2>
+                            <div class="callout small">
+                                <h5>Art</h5>
+                                    <p class="center">digital . pixel . vector
+                                        <br>marker . watercolor
+                                    </p>
+                                <h5>Music</h5>
+                                    <p class="center">ARCT piano performance diploma
+                                        <br>composition . flute . vocal
+                                    </p>
+                                <h5>Gaming</h5>
+                                    <p class="center">PC . Mobile . 3DS
+                                    </p>
                             </div>
                         </div>
                     </div>
