Added past projects

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         <section ng-controller="panelController as panel">
             <header class="navbar">
             <div id="title">BERNICE GO</div>
-                <p id="subtitle">A FREELANCE WEB & GRAPHICS DESIGNER</p>
+                <p id="subtitle">A FREELANCE WEB & GRAPHICS DESIGNER
+                </p>
                 <div class="row">
                     <div class="small-12 columns">           
                         <div id="nav" ng-init="tab = 3" class="center">
@@ -139,8 +140,20 @@
 
                 <div class="panel contact" ng-show="panel.isSelected(3)">
 
+                            <p class="links">
+                                <a href="https://github.com/bernicewygo" class="link" title='<i class="fa fa-github"></i>'>GitHub </a> //
+                                <a href="https://www.linkedin.com/in/bernicewygo" class="link" title='<i class="fa fa-linkedin-square"></i>'>LinkedIn</a> // 
+                                <a href="http://youtube.com/icedude999" class="link" title='<i class="fa fa-youtube"></i>'>Youtube</a>
+                            </p>       
                             <p>Welcome to my online portfolio! 
                             </p>
+                             <div class="row">
+                                <div class="small-12 medium-offset-3 medium-6 columns">
+                                   <p class="intro">Hi! I'm Bernice, and I'm a BBA/BCS Double Degree student at Wilfrid Laurier University & University of Waterloo set to graduate in August 2016. I'm looking for a full-time position starting in November 2016!
+                                    </p>
+                                </div>
+                            </div>
+
                             <h3>Current Projects</h3>
                             <br>
                             <div class="row">
@@ -171,19 +184,45 @@
                                     </div>
                                 </div>
                            </div>
+                            <h3>Past Projects</h3>
+                            <br>
+                            <div class="row">
+                                <div class="small-12 medium-offset-2 medium-4 columns">
+                                    <div class="callout small">
+                                        <h2>waterloc</h2>
+                                        <hr>
+                                        <p class="left info">
+                                            A Web App. Uses the Google Maps API and University of Waterloo API to locate buildings across the main campus. Dynamic search results.
+                                        </p>
+                                        <hr>
+                                        <p class="left info">
+                                            <a href="img/projects/waterloc1.png" data-lightbox="port"><img src="img/projects/waterloc-s.png" class="projectsImg"/></a>
+                                            <a href="img/projects/waterloc2.png" data-lightbox="port"><img src="img/projects/waterloc-s2.png" class="projectsImg"/></a>
+                                        </p>
+                                    </div>
+                                </div>
+                                 <div class="small-12 medium-4 columns">
+                                    <div class="callout small">
+                                        <h2>Specia</h2>
+                                        <hr>
+                                        <p class="left info">
+                                            A 2D mini game of a squid built with HTML5/canvas. Pressing space doubles the squid size and speed. Moving the squid makes it squirt ink. 
+                                        </p>
+                                        <hr>
+                                        <p class="left info">
+                                            <a href="img/projects/specia.png" data-lightbox="port"><img src="img/projects/specia-s.png" class="projectsImg"/></a>
+                                        </p>
+                                    </div>
+                                </div>
+                           </div>
 
-                            <h3>Let's talk!</h3>
+
+                             <h3>Let's talk!</h3>
 
                             <p>Feel free to <a href="http://sites.strawberry-tenshi.net/#contact">contact me</a>, or send me a note on gmail - bernicewygo</p>        
-
-                            <p class="links">
-                                <a href="https://github.com/bernicewygo" class="link" title='<i class="fa fa-github"></i>'>GitHub </a> //
-                                <a href="https://www.linkedin.com/in/bernicewygo" class="link" title='<i class="fa fa-linkedin-square"></i>'>LinkedIn</a> // 
-                                <a href="http://youtube.com/icedude999" class="link" title='<i class="fa fa-youtube"></i>'>Youtube</a>
-                            </p>          
+   
                 </div>
-
-      
+     
                 </div>
             </div>
         </section>
