Updated past projects

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                                 </div>
                                  <div class="small-12 medium-4 columns">
                                     <div class="callout small">
-                                        <h2>Specia</h2>
+                                        <h2>Squidpia</h2>
                                         <hr>
                                         <p class="left info">
                                             A 2D mini game of a squid built with HTML5/canvas. Pressing space doubles the squid size and speed. Moving the squid makes it squirt ink. 
