Updated front & resume

--- a/index.html
+++ b/index.html
@@ -175,11 +175,24 @@
                                         <h2>Neko Game</h2>
                                         <hr>
                                         <p class="left info">
-                                            A 2D-platformer cat game, made with Unreal Engine 4. 
+                                            A cat Android game, made with Unreal Engine 4. 
                                         </p>
                                         <hr>
                                         <p class="info">
                                             Under development
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="small-12 medium-4 columns">
+                                    <div class="callout small">
+                                        <h2>Upscale Markets</h2>
+                                        <hr>
+                                        <p class="left info">
+                                            An online grocery store web app made with Google's Material AngularJS. 
+                                        </p>
+                                        <hr>
+                                        <p class="info">
+                                            Under development. To be completed by April 2016.
                                         </p>
                                     </div>
                                 </div>
