--- a/index.html
+++ b/index.html
@@ -183,6 +183,8 @@
                                         </p>
                                     </div>
                                 </div>
+                            </div>
+                            <div class="row">
                                 <div class="small-12 medium-4 columns">
                                     <div class="callout small">
                                         <h2>Upscale Markets</h2>
@@ -196,7 +198,7 @@
                                         </p>
                                     </div>
                                 </div>
-                           </div>
+                            </div>
                             <h3>Past Projects</h3>
                             <br>
                             <div class="row">
