--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="small-12 medium-4 columns">
+                                <div class="small-12 medium-offset-2 medium-4 columns">
                                     <div class="callout small">
                                         <h2>Upscale Markets</h2>
                                         <hr>
